src/components/Sidebar.css
.sidebar {
  flex: 0.3;
  background-color: var(--slack-color);
  color: white;
  border-top: 1px solid #49274b;
  max-width: 260px;
}

.sidebar > hr {
  margin: 10px 0;
  border: 1px solid #49274b;
}

.sidebar__header {
  display: flex;
  border-bottom: 1px solid #49274b;
  padding-bottom: 10px;
  padding: 13px;
}

.sidebar__info {
  flex: 1;
}

.sidebar__info > h2 {
  font-size: 15px;
  font-weight: bold;
  margin-bottom: 5px;
}

.sidebar__info > h3 {
  display: flex;
  align-items: center;
  font-size: 13px;
  font-weight: 400;
}

.sidebar__info > h3 > .MuiSvgIcon-root {
  font-size: 14px;
  margin-top: 1px;
  margin-right: 2px;
  color: green;
}

.sidebar__header > .MuiSvgIcon-root {
  font-size: 18px;
  padding: 8px;
  color: #49274b;
  background-color: white;
  border-radius: 999px;
}

